--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simon Game",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {},
   "scripts": {
